# ricemesh-gis-processing

./: .env.example  .gitignore  1-server-run.bash  2-arq-worker.bash  2-celery-worker-run.bash  README.md  docker-compose.yml  pyproject.toml  server-run.bash
src/: main.py
src/arq_worker/: settings.py
src/arq_worker/tasks/: videoOps_task.py
src/celery_app/: app.py
src/celery_app/tasks/: videoOps_task.py
src/components/imagery/: gee.py  stac.py
src/components/segmentation/: __init__.py  bbox.py  filter.py
src/components/segmentation/fastsam_yolo/: __init__.py  vari_prep.py
src/components/segmentation/samgeo_sam2/: __init__.py  bbox.py  filter.py  ndvi_filter.py  samgeo_sam2.py  samgeo_text.py
src/components/upscaling/: dsen2.py  esrgan.py
src/components/upscaling/ldsr2/: __init__.py  ldsr2.py
src/db/: __init__.py  connection.py  connection_beanie.py  connection_bunnet.py  gridfs_ops.py
src/db/models/: __init__.py  common.py  parsed_image.py  video_upload.py  webodm_asset.py  webodm_task.py
src/modules/: parsevid.py  plot_segmentation.py  tiling.py  visualize.py
src/modules/segmentation/: __init__.py  fastsam.py
src/server/: common.py  server.py
src/server/controllers/: videoOps_controller.py  videoParser_controller.py  webodm_controller.py
src/server/routers/: route.py  videoOps_route.py  webodm_route.py
src/server/schemas/: videoOps_schema.py  videoParser_schema.py  webodm_schema.py
src/server/services/: videoOps_service.py  videoParser_service.py  webodm_service.py
src/utils/: __init__.py  utils.py
(+2 files in other folders)
