[project]
name = "ricemesh-gis-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "bokeh>=3.9.0",
    "dask[distributed]>=2026.3.0",
    "earthengine-api>=1.7.20",
    "geemap>=0.37.2",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "odc-stac[botocore]>=0.5.2",
    "opensr-model>=1.1.0",
    "opensr-utils>=1.2.0",
    "pystac-client>=0.9.0",
    "python-dotenv>=1.2.2",
    "scikit-image>=0.26.0",
    "segment-geospatial[samgeo2,text]>=1.3.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers<5.0.0",
]
[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
