[project]
name = "ricemesh-gis-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "arq>=0.28.0",
    "beanie>=2.1.0",
    "fastapi>=0.136.1",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "motor>=3.7.1",
    "odc-stac[botocore]>=0.5.2",
    "pydantic-mongo>=3.1.0",
    "pymediainfo>=7.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "scikit-image>=0.26.0",
    "segment-geospatial>=1.3.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers<5.0.0",
    "ultralytics>=8.0.122",
    "uvicorn>=0.46.0",
]
[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
